testdata/baselines/reference/compiler/quantifiedTypesUnwrapBaseType.errors.txt
quantifiedTypesUnwrapBaseType.ts(6,5): error TS2345: Argument of type 'number' is not assignable to parameter of type 'T'.
  'T' could be instantiated with an arbitrary type which could be unrelated to 'number'.


==== quantifiedTypesUnwrapBaseType.ts (1 errors) ====
    const f = (x: <T> [T, NoInfer<T>]) => {
      let [t0, t1] = x
    }
    
    const g = (f: <T> ((t: T) => T)) => {
      f(0)
        ~
!!! error TS2345: Argument of type 'number' is not assignable to parameter of type 'T'.
!!! error TS2345:   'T' could be instantiated with an arbitrary type which could be unrelated to 'number'.
    }
    